--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,18 @@
   "name": "server",
   "version": "1.0.0",
   "description": "Helsinki-bike-app server",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "watch": "nodemon server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Konsta",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "mongoose": "^6.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
+  }
 }
