--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,7 @@
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "npm start --prefix ../client",
-    "dev": "concurrently \"npm run watch\" \"npm run client\"",
-    "heroku-postbuild":"cd client && npm install && npm run build"
+    "dev": "concurrently \"npm run watch\" \"npm run client\""
   },
   "author": "Konsta",
   "license": "MIT",
