--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "cd server && npx jest",
     "dev": "cd server && npm run dev",
-    "heroku-postbuild":" cd client && npm install && npm run build"
+    "heroku-postbuild":" cd client && npm install && npm run build",
+    "start": "cd server && npm start"
   },
   "repository": {
     "type": "git",
