--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "cd server && npm run dev",
     "heroku-postbuild":" cd client && npm install && npm run build",
     "start": "cd server && npm start",
-    "install": "cd server && npm install"
+    "postinstall": "npm install --prefix ./server"
   },
   "repository": {
     "type": "git",
